@@ -1,7 +1,8 @@
 ===============================================================================
 20.6.0
 Added etl::message_router_registry.
-Changed etl::flat_multimap & etl::flat_multiset to iterate in insertion order.
+Changed etl::flat_multimap & etl::flat_multiset to iterate in insertion order, as per C++11 map and set.
+Added ETL_CONSTEXPR to etl::array.
 C++98 compatibility fixes.
 Abstracted unit test framework header.
 
